--- a/src/LiteGraph.Sdk/LiteGraph.Sdk.csproj
+++ b/src/LiteGraph.Sdk/LiteGraph.Sdk.csproj
@@ -2,9 +2,9 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net8.0</TargetFrameworks>
-		<Version>3.1.5</Version>
-		<Description>SDK for LiteGraph, a simple graph database abstraction with a RESTful interface, JSON data query support, and GEXF output support.</Description>
-		<PackageReleaseNotes>Refactor, multitenancy, users, credentials, and tags, including tag based retrieval</PackageReleaseNotes>
+		<Version>4.0.0</Version>
+		<Description>SDK for LiteGraph, a property graph database with support for graph relationships, tags, labels, metadata, data, and vectors.</Description>
+		<PackageReleaseNotes>Refactor, batch APIs.</PackageReleaseNotes>
 		<ApplicationIcon>assets\favicon.ico</ApplicationIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>LiteGraph.Sdk</Title>
